--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="relative container mx-auto p-6">Hello</nav>
+  <nav class="relative container mx-auto p-6 border-b-2 border-slate-200">
+    <div class="flex items-center justify-between">
+      <div class="px-2 flex-col bg-logoColor text-slate-100	text-center border-4 border-neutral-400">
+        <p class="text-2xl">OneSkool</p>
+        <p class="text-sm font-thin text-slate-300	
+        ">Be Job Ready</p>
+      </div>
+      <div class="hidden md:flex space-x-7 text-xl font-semibold">
+        <a href="#" class="hover:text-cyan ">Find</a>
+        <a href="#">My Dashboard</a>
+        <a href="#"><img src="img/bubble-chat.png" alt="chat" srcset=""></a>
+        <a href="#"><img src="img/bell.png" alt="bell" srcset=""></a>
+        <div class="flex border border-slate-300 rounded-full">
+          <a href="#"><img src="img/menu.png" alt="menu" class="px-2 py-1"></a>
+          <a href="#"><img src="img/account.png" alt="user" class="pl-2"></a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </body>
 </html>
