--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="relative container mx-auto p-6 border-b-2 border-slate-200">
     <div class="flex items-center justify-between">
       <div class="px-2 flex-col bg-logoColor text-slate-100	text-center border-4 border-neutral-400">
-        <p class="text-2xl">OneSkool</p>
+        <p class="text-xl">OneSkool</p>
         <p class="text-sm font-thin text-slate-300	
         ">Be Job Ready</p>
       </div>
@@ -27,5 +27,20 @@
       </div>
     </div>
   </nav>
+  <section class="relative container mx-auto p-6 flex border-b-2 border-slate-200">
+    <div class="flex-col text-center">
+      <img src="img/girl.jpg" alt="photo" class="">
+      <p class="py-1 font-semibold text-xl">Padi Cheng</p>
+      <p class="p-1 font-thin text-sm bg-lightGray">UIUX Designer</p>
+    </div>
+    <div class="flex-col p-3 ml-5">
+      <p class="font-semibold ">About Me</p>
+      <p class="mt-3 text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit fugit itaque cupiditate. Iusto soluta saepe vero explicabo corrupti dolores doloremque doloribus, aperiam eaque rerum commodi omnis voluptatem esse distinctio tempora porro error numquam rem, eligendi temporibus nulla vitae incidunt quidem! Rem ratione, adipisci reiciendis incidunt ab nobis quidem necessitatibus quis.</p>
+      <div class="flex mt-4">
+        <input type="button" value="Message" class="bg-green text-slate-200 m-1 px-1 border-inherit rounded-full">
+        <input type="button" value="invite+" class="bg-cyan m-1 px-3 border-inherit rounded-full">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
