Create statistic section

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!-- Navbar -->
   <nav class="relative container mx-auto p-6 border-b-2 border-slate-200">
     <div class="flex items-center justify-between">
-      <div class="px-2 flex-col bg-logoColor text-slate-100	text-center border-4 border-neutral-400">
+      <div class="w-1/6 px-2 flex-col bg-logoColor text-slate-100	text-center border-4 border-neutral-400">
         <p class="text-xl">OneSkool</p>
         <p class="text-sm font-thin text-slate-300	
         ">Be Job Ready</p>
       </div>
-      <div class="hidden md:flex space-x-7 text-xl font-semibold">
+      <div class="w-6/6 hidden md:flex space-x-7 text-xl font-semibold">
         <a href="#" class="hover:text-cyan ">Find</a>
         <a href="#">My Dashboard</a>
         <a href="#"><img src="img/bubble-chat.png" alt="chat" srcset=""></a>
@@ -27,20 +27,122 @@
       </div>
     </div>
   </nav>
-  <section class="relative container mx-auto p-6 flex border-b-2 border-slate-200">
-    <div class="flex-col text-center">
-      <img src="img/girl.jpg" alt="photo" class="">
+  
+  <section class="relative container flex mx-auto p-6 justify-between border-b-2 border-slate-200">
+    <div class="flex-col text-center w-1/6">
+      <img src="img/girl.jpg" alt="photo" class="w-32 mx-auto">
       <p class="py-1 font-semibold text-xl">Padi Cheng</p>
       <p class="p-1 font-thin text-sm bg-lightGray">UIUX Designer</p>
     </div>
-    <div class="flex-col p-3 ml-5">
+    
+    <div class="flex-col w-4/6">
       <p class="font-semibold ">About Me</p>
-      <p class="mt-3 text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit fugit itaque cupiditate. Iusto soluta saepe vero explicabo corrupti dolores doloremque doloribus, aperiam eaque rerum commodi omnis voluptatem esse distinctio tempora porro error numquam rem, eligendi temporibus nulla vitae incidunt quidem! Rem ratione, adipisci reiciendis incidunt ab nobis quidem necessitatibus quis.</p>
+      <p class="mt-3 text-sm"> Iusto soluta saepe vero explicabo corrupti Iusto soluta saepe vero explicabo corrupti Iusto soluta saepe vero explicabo corrupti  dolores doloremque doloribus, aperiam eaque rerum commodi omnis voluptatem esse distinctio tempora porro error numquam rem, eligendi temporibus nulla vitae incidunt quidem! Rem ratione,</p>
       <div class="flex mt-4">
         <input type="button" value="Message" class="bg-green text-slate-200 m-1 px-1 border-inherit rounded-full">
         <input type="button" value="invite+" class="bg-cyan m-1 px-3 border-inherit rounded-full">
       </div>
     </div>
+  </section>
+
+  <section class="relative container flex mx-auto p-6 justify-between">
+    <ul class="flex-col text-sm w-1/6">
+      <li class="pt-2">Summary</li>
+      <li class="pt-2">Project history</li>
+      <ul class="flex pt-2">
+        <img src="img/play.png" alt="play">
+        <li class="text-blueBlue">Testimonials</li>
+      </ul>
+      <li class="pt-2">Certificate</li>
+      <li class="pt-2">Skills</li>
+      <li class="pt-2">Education</li>
+    </ul>
+
+    <section class="flex-col w-4/6">
+      <ul class="flex border border-slate-300 rounded-lg">
+        <li class="flex p-3">
+          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <div class="flex-col text-center">
+            <p>5</p>
+            <p>Testimonials</p>
+          </div>
+        </li>
+        <li class="flex p-3">
+          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <div class="flex-col text-center">
+            <p>5</p>
+            <p>Testimonials</p>
+          </div>
+        </li>
+        <li class="flex p-3">
+          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <div class="flex-col text-center">
+            <p>5</p>
+            <p>Testimonials</p>
+          </div>
+        </li>
+        <li class="flex p-3">
+          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <div class="flex-col text-center">
+            <p>5</p>
+            <p>Testimonials</p>
+          </div>
+        </li>
+      </ul>
+
+      <div class="border border-slate-300 rounded-lg mt-2">
+        <div class="flex justify-around">
+          <div class="flex">
+            <div>
+              <p>Projects Area</p>
+              <img src="img/graph.png" alt="graph" class="w-40">
+            </div>
+            <ul class="flex-col">
+              <li class="flex-col">
+                <p>Website</p>
+                <div class="h-1.5 w-24 bg-lightPink border-2 border-lightPink rounded-full"></div>
+              </li>
+              <li class="flex-col">
+                <p>Ios apps</p>
+                <div class="h-1.5 w-24 bg-cyan border-2 border-cyan rounded-full"></div>
+              </li>
+            </ul>
+          </div>
+          <div class="flex">
+            <div>
+              <p>Projects Category</p>
+              <img src="img/pie-chart.png" alt="graph" class="w-40">
+            </div>
+            <ul class="flex-col">
+              <li class="flex-col">
+                <p>Website</p>
+                <div class="h-1.5 w-24 bg-darkBlue border-2 border-darkBlue rounded-full"></div>
+              </li>
+              <li class="flex-col">
+                <p>Ios apps</p>
+                <div class="h-1.5 w-24 bg-green border-2 border-green rounded-full"></div>
+              </li>
+              <li class="flex-col">
+                <p>Ios apps</p>
+                <div class="h-1.5 w-24 bg-darkBrown border-2 border-darkBrown rounded-full"></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-col">
+          <p class="ml-5">Skills</p>
+          <ul class="flex justify-around m-2">
+            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+          </ul> 
+        </div>
+
+      </div>
+    </section>
+
   </section>
 </body>
 </html>
