Create Projects History section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,111 @@
 
       </div>
     </section>
+  </section>
 
+  <section class="relative container flex mx-auto p-3 justify-between">
+    <div class="w-1/6"></div>
+    <div class="w-4/6 border border-slate-300 rounded-lg p-1">
+    <p class="font-semibold">Projects History</p>
+    <div class="grid grid-rows-3 grid-flow-col gap-4">
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <a href="#" class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="w-3"> -->
+            <p class="text-sm">Detail</p>
+          </a>
+        </div>
+      </div>
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <a href="#" class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="w-3"> -->
+            <p class="text-sm">Detail</p>
+          </a>
+        </div>
+      </div>
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <a href="#" class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="w-3"> -->
+            <p class="text-sm">Detail</p>
+          </a>
+        </div>
+      </div>
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <a href="#" class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="w-3"> -->
+            <p class="text-sm">Detail</p>
+          </a>
+        </div>
+      </div>
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <div class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="p-2"> -->
+            <p class="text-sm">Detail</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex-col border border-transparent rounded-lg shadow-xl p-2">
+        <div class="flex justify-evenly">
+          <p class="text-sm font-bold">This is two row Project and the look like and two row Project name ....</p>
+          <p class="bg-lightPink border-inherit rounded-full p-1 font-semibold">100%</p>
+        </div>
+        <br>
+        <p class="text-xs">Company name</p>
+        <br>
+        <div class="flex justify-around">
+          <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia explicabo, dolorum nemo tenetur voluptatibus.</p>
+          <a href="#" class="flex bg-lightBlue text-white border-inherit rounded-lg p-3">
+            <!-- <img src="img/resume.png" alt="Detail" class="w-3"> -->
+            <p class="text-sm">Detail</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   </section>
 </body>
 </html>
