Create Testimonials section

--- a/index.html
+++ b/index.html
@@ -248,5 +248,76 @@
     </div>
   </div>
   </section>
+
+
+  <section class="relative container flex mx-auto p-3 justify-between">
+    <div class="w-1/6"></div>
+    <div class="w-4/6 border border-slate-300 rounded-lg p-1">
+      <p class="font-semibold">Testimonials</p>
+      <div class="grid grid-rows-3 grid-flow-col gap-4 p-5">
+        <div class="flex-col bg-veryLightCyan border border-transparent rounded-lg shadow-xl p-2">
+          <p class="text-xs italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias esse animi illum excepturi inventore sit necessitatibus velit repudiandae, exercitationem saepe enim laudantium distinctio, voluptate, explicabo alias! Provident dolore sunt fugiat.</p>
+          <br>
+          <div class="flex">
+            <img src="img/girl.jpg" alt="girl" class="w-10 m-1">
+            <div class="flex-col m-1">
+              <p class="text-sm">Garima Chandra</p>
+              <p class="text-xs">Company name</p>
+            </div>
+          </div>
+          <br>
+        </div>
+        <div class="flex-col bg-veryLightCyan border border-transparent rounded-lg shadow-xl p-2">
+          <p class="text-xs italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias esse animi illum excepturi inventore sit necessitatibus velit repudiandae, exercitationem saepe enim laudantium distinctio, voluptate, explicabo alias! Provident dolore sunt fugiat.</p>
+          <br>
+          <div class="flex">
+            <img src="img/girl.jpg" alt="girl" class="w-10 m-1">
+            <div class="flex-col m-1">
+              <p class="text-sm">Garima Chandra</p>
+              <p class="text-xs">Company name</p>
+            </div>
+          </div>
+          <br>
+        </div>
+        <div class="flex-col bg-veryLightCyan border border-transparent rounded-lg shadow-xl p-2">
+          <p class="text-xs italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias esse animi illum excepturi inventore sit necessitatibus velit repudiandae, exercitationem saepe enim laudantium distinctio, voluptate, explicabo alias! Provident dolore sunt fugiat.</p>
+          <br>
+          <div class="flex">
+            <img src="img/girl.jpg" alt="girl" class="w-10 m-1">
+            <div class="flex-col m-1">
+              <p class="text-sm">Garima Chandra</p>
+              <p class="text-xs">Company name</p>
+            </div>
+          </div>
+          <br>
+        </div>
+        <div class="flex-col bg-veryLightCyan border border-transparent rounded-lg shadow-xl p-2">
+          <p class="text-xs italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias esse animi illum excepturi inventore sit necessitatibus velit repudiandae, exercitationem saepe enim laudantium distinctio, voluptate, explicabo alias! Provident dolore sunt fugiat.</p>
+          <br>
+          <div class="flex">
+            <img src="img/girl.jpg" alt="girl" class="w-10 m-1">
+            <div class="flex-col m-1">
+              <p class="text-sm">Garima Chandra</p>
+              <p class="text-xs">Company name</p>
+            </div>
+          </div>
+          <br>
+        </div>
+        <div class="flex-col bg-veryLightCyan border border-transparent rounded-lg shadow-xl p-2">
+          <p class="text-xs italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias esse animi illum excepturi inventore sit necessitatibus velit repudiandae, exercitationem saepe enim laudantium distinctio, voluptate, explicabo alias! Provident dolore sunt fugiat.</p>
+          <br>
+          <div class="flex">
+            <img src="img/girl.jpg" alt="girl" class="w-10 m-1">
+            <div class="flex-col m-1">
+              <p class="text-sm">Garima Chandra</p>
+              <p class="text-xs">Company name</p>
+            </div>
+          </div>
+          <br>
+        </div>
+      </div>
+    </div>
+
+  </section>
 </body>
 </html>
