--- a/index.html
+++ b/index.html
@@ -317,7 +317,58 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="relative container flex mx-auto p-3 justify-between">
+    <div class="w-1/6"></div>
+    <div class="w-4/6 border border-slate-300 rounded-lg p-3">
+      <p class="font-semibold">Certificate</p>
+      <br>
+      <div class="flex-col p-3">
+        <div class="flex">
+          <img src="img/certificate.jpg" alt="certificate" class="w-64">
+          <div class="flex-col p-2">
+            <p class="text-sm font-bold p-1">This is two row Project name and the boundry look like and more and ...</p>
+            <br>
+            <p class="text-xs font-semibold p-1">Dec, 19.2021</p>
+            <p class="text-xs font-semibold p-1">Apple, certified by XXXX</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex-col p-3">
+        <div class="flex">
+          <img src="img/certificate.jpg" alt="certificate" class="w-64">
+          <div class="flex-col p-2">
+            <p class="text-sm font-bold p-1">This is two row Project name and the boundry look like and more and ...</p>
+            <br>
+            <p class="text-xs font-semibold p-1">Dec, 19.2021</p>
+            <p class="text-xs font-semibold p-1">Apple, certified by XXXX</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex-col p-3">
+        <div class="flex">
+          <img src="img/certificate.jpg" alt="certificate" class="w-64">
+          <div class="flex-col p-2">
+            <p class="text-sm font-bold p-1">This is two row Project name and the boundry look like and more and ...</p>
+            <br>
+            <p class="text-xs font-semibold p-1">Dec, 19.2021</p>
+            <p class="text-xs font-semibold p-1">Apple, certified by XXXX</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex-col p-3">
+        <div class="flex">
+          <img src="img/certificate.jpg" alt="certificate" class="w-64">
+          <div class="flex-col p-2">
+            <p class="text-sm font-bold p-1">This is two row Project name and the boundry look like and more and ...</p>
+            <br>
+            <p class="text-xs font-semibold p-1">Dec, 19.2021</p>
+            <p class="text-xs font-semibold p-1">Apple, certified by XXXX</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 </html>
