--- a/index.html
+++ b/index.html
@@ -370,5 +370,56 @@
       </div>
     </div>
   </section>
+
+  <section class="relative container flex mx-auto p-3 justify-between">
+    <div class="w-1/6"></div>
+    <div class="w-4/6 border border-slate-300 rounded-lg p-3">
+      <p class="font-semibold">Education</p>
+      <br>
+      <div class="flex-col">
+        <div class="flex">
+          <div class="flex-col m-2">
+            <img src="img/square.png" alt="square" class="w-14">
+            <p class="text-gray text-xs">2018-2021</p>
+          </div>
+          <div class="flex-col m-1">
+            <p class="font-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="font-semibold text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, accusamus!</p>
+            <br>
+            <p class="font-thin text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          </div>
+        </div>
+        <br>
+        <div class="flex">
+          <div class="flex-col m-2">
+            <img src="img/square.png" alt="square" class="w-14">
+            <p class="text-gray text-xs">2018-2021</p>
+          </div>
+          <div class="flex-col m-1">
+            <p class="font-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="font-semibold text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, accusamus!</p>
+            <br>
+            <p class="font-thin text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="relative container flex mx-auto p-3 justify-between">
+    <div class="w-1/6"></div>
+    <div class="w-4/6 border border-slate-300 rounded-lg p-3">
+      <p class="font-semibold">Skills</p>
+      <br>
+    </div>
+  </section>
 </body>
 </html>
