Add Skills and footer

--- a/index.html
+++ b/index.html
@@ -419,7 +419,64 @@
     <div class="w-4/6 border border-slate-300 rounded-lg p-3">
       <p class="font-semibold">Skills</p>
       <br>
+      <div class="grid grid-rows-2 grid-flow-col gap-4 p-5">
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+        <div class="flex-col bg-lightGray border border-transparent rounded-lg p-2 text-center">
+          <img src="img/adobe.png" alt="adobe" class="mx-auto">
+          <br>
+          <p class="font-semibold">Adobe Creative Suite</p>
+          <br>
+          <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptas fuga placeat libero voluptatibus saepe?</p>
+        </div>
+      </div>
     </div>
   </section>
+
+  <footer class="relative container mx-auto p-3 bg-gray h-48 m-10">
+    <ul class="flex justify-around">
+      <li class="font-semibold">Logo</li>
+      <ul class="flex">
+        <li class="mx-3 font-semibold">Site map1</li>
+        <li class="mx-3 font-semibold">Site map1</li>
+        <li class="mx-3 font-semibold">Site map1</li>
+        <li class="mx-3 font-semibold">Site map1</li>
+        <li class="mx-3 font-semibold">Site map1</li>
+      </ul>
+    </ul>
+  </footer>
 </body>
 </html>
