--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <div class="flex-col text-center w-1/6">
       <img src="img/girl.jpg" alt="photo" class="w-32 mx-auto">
       <p class="py-1 font-semibold text-xl">Padi Cheng</p>
-      <p class="p-1 font-thin text-sm bg-lightGray">UIUX Designer</p>
+      <p class="font-thin text-xs bg-lightGray">UIUX Designer</p>
     </div>
     
     <div class="flex-col w-4/6">
       <p class="font-semibold ">About Me</p>
       <p class="mt-3 text-sm"> Iusto soluta saepe vero explicabo corrupti Iusto soluta saepe vero explicabo corrupti Iusto soluta saepe vero explicabo corrupti  dolores doloremque doloribus, aperiam eaque rerum commodi omnis voluptatem esse distinctio tempora porro error numquam rem, eligendi temporibus nulla vitae incidunt quidem! Rem ratione,</p>
       <div class="flex mt-4">
-        <input type="button" value="Message" class="bg-green text-slate-200 m-1 px-1 border-inherit rounded-full">
-        <input type="button" value="invite+" class="bg-cyan m-1 px-3 border-inherit rounded-full">
+        <input type="button" value="Message" class="bg-green text-slate-200 m-1 px-2 border-inherit rounded-full">
+        <input type="button" value="invite+" class="bg-cyan m-1 px-2 mx-3  border-inherit rounded-full">
       </div>
     </div>
   </section>
@@ -61,31 +61,31 @@
     <section class="flex-col w-4/6">
       <ul class="flex border border-slate-300 rounded-lg">
         <li class="flex p-3">
-          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <img src="img/speech-bubbles.png" alt="Testimonials" class="border border-transparent bg-cyan rounded-full p-2">
           <div class="flex-col text-center">
-            <p>5</p>
-            <p>Testimonials</p>
+            <p class="font-bold text-xl">5</p>
+            <p class="text-sm">Testimonials</p>
           </div>
         </li>
         <li class="flex p-3">
-          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <img src="img/diploma.png" alt="Certificate" class="border border-transparent bg-lightBrown rounded-full p-2">
           <div class="flex-col text-center">
-            <p>5</p>
-            <p>Testimonials</p>
+            <p class="font-bold text-xl">8</p>
+            <p class="text-sm">Certificate</p>
           </div>
         </li>
         <li class="flex p-3">
-          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <img src="img/diploma1.png" alt="Projects" class="border border-transparent bg-lightGreen rounded-full p-2">
           <div class="flex-col text-center">
-            <p>5</p>
-            <p>Testimonials</p>
+            <p class="font-bold text-xl">13</p>
+            <p class="text-sm">Projects</p>
           </div>
         </li>
         <li class="flex p-3">
-          <img src="img/speech-bubbles.png" alt="Testimonials">
+          <img src="img/document.png" alt="Delivery rate" class="border border-transparent bg-pink rounded-full p-2">
           <div class="flex-col text-center">
-            <p>5</p>
-            <p>Testimonials</p>
+            <p class="font-bold text-xl">100%</p>
+            <p class="text-sm">Delivery rate</p>
           </div>
         </li>
       </ul>
@@ -94,49 +94,49 @@
         <div class="flex justify-around">
           <div class="flex">
             <div>
-              <p>Projects Area</p>
-              <img src="img/graph.png" alt="graph" class="w-40">
+              <p class="font-semibold">Projects Area</p>
+              <img src="img/graph.png" alt="graph" class="w-40 mt-3">
             </div>
             <ul class="flex-col">
               <li class="flex-col">
-                <p>Website</p>
+                <p class="text-sm mb-1">Website</p>
                 <div class="h-1.5 w-24 bg-lightPink border-2 border-lightPink rounded-full"></div>
               </li>
               <li class="flex-col">
-                <p>Ios apps</p>
+                <p class="text-sm mb-1">Ios apps</p>
                 <div class="h-1.5 w-24 bg-cyan border-2 border-cyan rounded-full"></div>
               </li>
             </ul>
           </div>
           <div class="flex">
             <div>
-              <p>Projects Category</p>
-              <img src="img/pie-chart.png" alt="graph" class="w-40">
+              <p class="font-semibold">Projects Category</p>
+              <img src="img/pie-chart.png" alt="graph" class="w-40 mt-3">
             </div>
-            <ul class="flex-col">
+            <ul class="flex-col m-1">
               <li class="flex-col">
-                <p>Website</p>
+                <p class="text-sm mb-1">Education</p>
                 <div class="h-1.5 w-24 bg-darkBlue border-2 border-darkBlue rounded-full"></div>
               </li>
               <li class="flex-col">
-                <p>Ios apps</p>
+                <p class="text-sm mb-1">Cryptocurrency</p>
                 <div class="h-1.5 w-24 bg-green border-2 border-green rounded-full"></div>
               </li>
               <li class="flex-col">
-                <p>Ios apps</p>
+                <p class="text-sm mb-1">Commercial</p>
                 <div class="h-1.5 w-24 bg-darkBrown border-2 border-darkBrown rounded-full"></div>
               </li>
             </ul>
           </div>
         </div>
         <div class="flex-col">
-          <p class="ml-5">Skills</p>
+          <p class="ml-5 font-semibold">Skills</p>
           <ul class="flex justify-around m-2">
-            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
-            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
-            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
-            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
-            <li class="bg-lightBrown p-1 border-inherit rounded-full">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full text-sm">Adobe Creative Suite</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full text-sm">Skills for selection</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full text-sm">Figma/Sketch</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full text-sm">User Testing</li>
+            <li class="bg-lightBrown p-1 border-inherit rounded-full text-sm">Adobe Creative Suite</li>
           </ul> 
         </div>
 
@@ -383,7 +383,7 @@
             <p class="text-gray text-xs">2018-2021</p>
           </div>
           <div class="flex-col m-1">
-            <p class="font-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p class="font-bold">National Cheng Kung UniversityNational Cheng Kung.</p>
             <p class="font-semibold text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, accusamus!</p>
             <br>
             <p class="font-thin text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
@@ -400,8 +400,7 @@
             <p class="text-gray text-xs">2018-2021</p>
           </div>
           <div class="flex-col m-1">
-            <p class="font-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p class="font-semibold text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, accusamus!</p>
+            <p class="font-bold">Taipei Municipal Zhongshan Girls High School.</p>
             <br>
             <p class="font-thin text-sm">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
             <p class="font-thin text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
